--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/sf-pro-display');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -55,6 +57,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: 'SF Pro Display', sans-serif;
   }
 }
 
